[gd_scene load_steps=4 format=3 uid="uid://c1xp60y371y"]

[ext_resource type="Script" path="res://gui.gd" id="1_d6yoj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4sm5d"]
bg_color = Color(0.168627, 0.168627, 0.168627, 0.623529)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lifei"]
bg_color = Color(0.6, 0.141176, 0.145098, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6yoj")

[node name="DmgInd" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.501961)

[node name="HpBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(300, 30)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 23.395
offset_top = -51.345
offset_right = 323.395
offset_bottom = -21.345
grow_vertical = 0
theme_override_constants/outline_size = 0
theme_override_styles/background = SubResource("StyleBoxFlat_4sm5d")
theme_override_styles/fill = SubResource("StyleBoxFlat_lifei")
value = 100.0
rounded = true
show_percentage = false

[node name="HpLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = -49.0
offset_right = 198.0
offset_bottom = -23.0
grow_vertical = 0
text = "100/100"

[node name="AmmoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -100.0
offset_right = 122.0
offset_bottom = -52.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "30/30"
